# codeql

ql/: rust-toolchain.toml
ql/extractor/: Cargo.toml
ql/extractor/src/: main.rs
ruby/: rust-toolchain.toml
ruby/extractor/: Cargo.toml
ruby/extractor/src/: extractor.rs  lib.rs  main.rs
ruby/extractor/src/generator/: dbscheme.rs  mod.rs  ql_gen.rs
ruby/generator/: Cargo.toml
ruby/ql/lib/codeql/ruby/dataflow/internal/: DataFlowDispatch.qll  DataFlowPublic.qll
ruby/ql/lib/codeql/ruby/frameworks/: ActionController.qll
ruby/ql/lib/codeql/ruby/security/: UnsafeDeserializationCustomizations.qll
ruby/ql/src/queries/: code-injection-variant.ql
ruby/ql/src/queries/security/cwe-611/: Xxe.qhelp
ruby/ql/test/library-tests/frameworks/action_controller/: ActionController.ql
ruby/ql/test/query-tests/security/cwe-502/unsafe-deserialization/: UnsafeDeserialization.expected  UnsafeDeserialization.rb
ruby/ql/test/query-tests/security/cwe-912/: http_to_file_access.rb
ruby/scripts/: create-extractor-pack.ps1  create-extractor-pack.sh
shared/extractor/: Cargo.toml
shared/extractor/src/: autobuilder.rs  cli.rs  diagnostics.rs  extractor.rs  lib.rs  node_types.rs  trap.rs
shared/extractor/src/generator/: dbscheme.rs  mod.rs
shared/tree-sitter-extractor/: Cargo.toml
shared/tree-sitter-extractor/src/: lib.rs  macros.rs
shared/yeast/src/: lib.rs
shared/yeast/tests/: test.rs
