[package]
name = "codeql-extractor"
version = "0.1.0"
authors = ["GitHub"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
tree-sitter = "0.20"
clap = { version = "4.1", features = ["derive", "env", "cargo"] }
tracing = "0.1"
rayon = "1.5.0"
num_cpus = "1.14.0"
regex = "1.7.1"
encoding = "0.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
